<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_interactive_markers</name>
  <version>0.0.1</version>
  <description>RViz panel for creating and managing frames with interactive markers for automated
    machine-tending systems.</description>

  <maintainer email="163688693+RaviRoKes@users.noreply.github.com">Ravi Roshan Keshari</maintainer>
  <author email="163688693+RaviRoKes@users.noreply.github.com">Ravi Roshan Keshari</author>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_rendering</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>Qt5</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>rviz_ogre_vendor</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>interactive_markers</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_rendering</exec_depend>
  <exec_depend>rviz_common_plugins</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>


  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>interactive_markers</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
